# HackHook

./: CMakeLists.txt  README.md  ai_review.py  dataParser.cpp  interface.fbs
.githooks/: pre-commit
common/: SharedBuffer.cpp  SharedBuffer.h  common.h  ring_buffer.hpp  shared_buffer.hpp  utility.cpp  utility.h
dataParser/: CMakeLists.txt  dataParser.cpp
gui/: CMakeLists.txt  MemoryCache.cpp  MemoryCache.h  OccurrenceColors.h  RegionViewDialog.cpp  RegionViewDialog.h  RegionViewDialog.ui  RpcClient.h  WindowSelectorCombo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/Tests/: CMakeLists.txt  main.cpp
injector/: Injector.h  injector.cpp  test.cpp
myhook/: BMH_SIMD.cpp  BMH_SIMD.h  CMakeLists.txt  FoundOccurrences.h  MemDumper.cpp  MemDumper.h  MemoryScanner.cpp  MemoryScanner.h  MyHook.cpp  MyHook.h  MyHookImport.h
myhook/Tests/: CMakeLists.txt  main.cpp
